introduce nose to run tests and remove tests from manage.py, tests now run in all environments

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ isolated_build = true
 [testenv]
 commands =
     poetry install -v --no-root
-    python manage.py test
+    nosetests --with-coverage --cover-package=openpoiservice -v
 setenv =
-    APP_SETTINGS = testing
-whitelist_externals = poetry
+    TESTING = true
+whitelist_externals =
+    poetry
+    nosetests
