--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ werkzeug = "0.16.1"
 gevent = "^1.4.0"
 flask-restplus = "^0.13.0"
 python-dotenv = "^0.12.0"
+nose = "^1.3.7"
 
 [tool.poetry.dev-dependencies]
 coverage = "^5.0"
