--- a/ops_settings_docker.yml
+++ b/ops_settings_docker.yml
@@ -19,8 +19,8 @@ provider_parameters:
   db_name: gis
   user_name: gis_admin
   password: admin
-  host: localhost
-  port: 5433
+  host: ops_psql_postgis_db_1
+  port: 5432
   port_tests: 5432
 column_mappings:
   # https://wiki.openstreetmap.org/wiki/Key:name
@@ -37,3 +37,9 @@ column_mappings:
   phone:
   # https://wiki.openstreetmap.org/wiki/Key:website
   website:
+  # https://wiki.openstreetmap.org/wiki/Key:healthcare:speciality
+  healthcare:speciality:
+  # https://wiki.openstreetmap.org/wiki/Key:vaccination
+  vaccination:
+  #https://wiki.openstreetmap.org/wiki/Key:zero_waste
+  zero_waste:
