--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ gunicorn==20.0.4
 hyperlink==20.0.1
 idna==3.1
 incremental==17.5.0
-itemadapter==0.2.0
+itemadapter>=0.1.0
 itemloaders==1.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
