--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ hyperlink==20.0.1
 idna==3.1
 incremental==17.5.0
 itemadapter>=0.1.0
-itemloaders==1.0.4
+itemloaders>=1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
