--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ pyproj>=2.6.0
 pyrsistent==0.17.3
 PyYAML
 queuelib==1.5.0
-Scrapy==2.4.1
+Scrapy>=2.3.0
 service-identity==18.1.0
 Shapely==1.7.1
 six==1.15.0
