--- a/docker-compose-with-postgis.yml
+++ b/docker-compose-with-postgis.yml
@@ -13,6 +13,8 @@ services:
   - ./categories_docker.yml:/deploy/app/openpoiservice/server/categories/categories.yml
   ports:
    - "5000:5000"
+  depends_on:
+    - psql_postgis_db
   mem_limit: 28g
   networks:
    - poi_network
@@ -31,7 +33,7 @@ services:
    - POSTGRES_DBNAME=gis        # Here it's important to keep the same name as the one configured inside ops_settings_docker.yml
    - ALLOW_IP_RANGE=0.0.0.0/0
   ports:
-   - 5434:5432
+   - 5432:5432
   restart: on-failure
   networks:
    - poi_network
