--- a/ops_settings_docker_standalone.yml
+++ b/ops_settings_docker_standalone.yml
@@ -11,9 +11,9 @@ maximum_area: 50000000
 maximum_linestring_length: 500000
 # limit of pois
 response_limit: 2000
-osm_file_tests: ['bremen-tests.osm.pbf']
-concurrent_workers: 1
-
+# amount of workers used for parsing the osm files
+concurrent_workers: 4
+# Database parameters
 provider_parameters:
   table_name: ops_planet_pois
   db_name: gis
