--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ pycparser==2.20
 PyDispatcher==2.0.5
 PyHamcrest==2.0.2
 pyOpenSSL==20.0.1
-pyproj>=2.6.0,<3.0.0
+pyproj==3.1.0
 pyrsistent==0.17.3
 PyYAML
 queuelib==1.5.0
@@ -49,7 +49,7 @@ service-identity==18.1.0
 Shapely==1.7.1
 six==1.15.0
 SQLAlchemy==1.3.22
-Twisted==20.3.0
+Twisted==21.2.0
 voluptuous==0.12.1
 w3lib==1.22.0
 Werkzeug==1.0.1
