--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cffi==1.16.0
 click==8.1.7
 constantly==23.10.4
 coverage==7.4.1
-cryptography>=3.0.0
+cryptography==42.0.3
 cssselect==1.2.0
 flasgger==0.9.7.1
 Flask==3.0.2
@@ -16,14 +16,14 @@ Flask-SQLAlchemy==3.1.1
 Flask-Testing==0.8.1
 GeoAlchemy2==0.14.4
 geojson==3.1.0
-gevent>=20.12.1
+gevent==24.2.1
 greenlet==3.0.3
 gunicorn==21.2.0
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
-itemadapter>=0.1.0
-itemloaders>=1.0.0
+itemadapter==0.8.0
+itemloaders==1.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 jmespath==1.0.1
@@ -44,7 +44,7 @@ pyproj==3.6.1
 pyrsistent==0.20.0
 PyYAML
 queuelib==1.6.2
-Scrapy>=2.3.0
+Scrapy==2.11.1
 service-identity==24.1.0
 Shapely==2.0.3
 six==1.16.0
