--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ cffi==1.16.0
 click==8.1.7
 constantly==23.10.4
 coverage==7.4.1
-cryptography==42.0.3
+cryptography==42.0.4
 cssselect==1.2.0
+cykhash==2.0.1
 flasgger==0.9.7.1
 Flask==3.0.2
 Flask-Cors==4.0.0
@@ -18,19 +19,20 @@ GeoAlchemy2==0.14.4
 geojson==3.1.0
 gevent==24.2.1
 greenlet==3.0.3
-gunicorn==21.2.0
+gunicorn==22.0.0
 hyperlink==21.0.0
-idna==3.6
+idna==3.7
 incremental==22.10.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 itsdangerous==2.1.2
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==1.0.1
 jsonschema==4.21.1
 lxml==5.1.0
 MarkupSafe==2.1.5
 mistune==3.0.2
+numpy==2.3.0
 parsel==1.8.1
 Protego==0.3.0
 psycopg2-binary==2.9.9
@@ -44,15 +46,15 @@ pyproj==3.6.1
 pyrsistent==0.20.0
 PyYAML
 queuelib==1.6.2
-Scrapy==2.11.1
+Scrapy==2.11.2
 service-identity==24.1.0
-Shapely==2.0.3
+Shapely==2.1.1
 six==1.16.0
 SQLAlchemy==2.0.27
 Twisted==23.10.0
 voluptuous==0.14.2
 w3lib==2.1.2
-Werkzeug==3.0.1
+Werkzeug==3.0.3
 zope.event==5.0
 zope.interface==6.2
 git+https://github.com/timmccauley/imposm-parser.git@python3
