--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,6 +10,10 @@ jobs:
   run_tests:
     runs-on: ubuntu-22.04
     steps:
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
     - name: Check out source
       uses: actions/checkout@v4
       with:
@@ -21,7 +25,7 @@ jobs:
         postgresql user: 'gis_admin'
         postgresql password: 'admin'
     - name: Install packages
-      run: sudo apt-get update && sudo apt-get install -y build-essential protobuf-compiler libprotobuf-dev python3 #proj-bin libproj-dev
+      run: sudo apt-get update && sudo apt-get install -y build-essential protobuf-compiler libprotobuf-dev
     - name: Activate cache for python packages
       uses: actions/cache@v4
       with:
